kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - protocol: TCP
    port: 3000
  type: NodePort
  selector:
    app: app
