kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: myhost
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 8080
